Fix header on mobile.

--- a/app/assets/stylesheets/iphone.css.scss
+++ b/app/assets/stylesheets/iphone.css.scss
@@ -9,4 +9,11 @@
       margin-left: 0;
       height: 40px;
     }
+
+  .header-phones {
+    font-size: 0.9em;
+  }
+  .navbar-brand img {
+    height: 50px !important;
+  }
 }
